tests/ui/fail/exhaustive_match_chain.stderr
error[E0004]: non-exhaustive patterns: `_` not covered
  --> tests/ui/fail/exhaustive_match_chain.rs:12:11
   |
12 |     match chain {
   |           ^^^^^ pattern `_` not covered
   |
note: `ChainCapability` defined here
  --> src/providers/mod.rs
   |
   | pub enum ChainCapability {
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   = note: the matched value is of type `ChainCapability`
   = note: `ChainCapability` is marked as non-exhaustive, so a wildcard `_` is necessary to match exhaustively
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
16 ~         ChainCapability::None => "none",
17 ~         _ => todo!(),
   |
